--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.0.2",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "web3": "^1.6.1"
   },
