--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "babel-plugin-styled-components": "^2.0.2",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-contextmenu": "^2.14.0",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "web3": "^1.6.1"
