--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.2",
+    "dotenv": "^14.2.0",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-contexify": "^5.0.0",
     "react-contextmenu": "^2.14.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
