--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metamask/detect-provider": "^1.2.0",
     "babel-plugin-styled-components": "^2.0.2",
     "dotenv": "^14.2.0",
     "next": "12.0.7",
