--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@metamask/detect-provider": "^1.2.0",
+    "abi-decoder": "^2.4.0",
     "babel-plugin-styled-components": "^2.0.2",
     "dotenv": "^14.2.0",
     "next": "12.0.7",
